syntax = "proto3";

package pb;

import "google/api/annotations.proto";

message CreateUserRequest {
    string email = 1;
    string password = 2;
}

message CreateUserResponse {
}

message ChangeEmailRequest {
    string new_email = 1;
}

message ChangeEmailResponse {
}

message ChangePasswordRequest {
    string current_password = 1;
    string new_password = 2;
}

message ChangePasswordResponse {
}

service UserService {
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {
        option (google.api.http) = {
            post: "/v1/user/create"
            body: "*"
        };
    }
    rpc ChangeEmail(ChangeEmailRequest) returns (ChangeEmailResponse) {
        option (google.api.http) = {
            put: "/v1/user/email/change"
            body: "*"
        };
    }
    rpc ChangePassword(ChangePasswordRequest) returns (ChangePasswordResponse) {
        option (google.api.http) = {
            put: "/v1/user/password/change"
            body: "*"
        };
    }
}
